deploy/istio-system/openfaas-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: openfaas
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: openfaas-fn
