deploy/istio-system/grafanax-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafanax
  namespace: istio-system
spec:
  hosts:
  - "grafanax.istio.weavedx.com"
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: grafanax
    timeout: 30s
